--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,4 @@
 place.name.required = Не заполнено поле "Площадка"
 
 # Institute
-institutes.name.required = Не заполнено поле "ВУЗ"
+institute.name.required = Не заполнено поле "ВУЗ"
