--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,6 @@ place.name.required = Не заполнено поле "Площадка"
 
 # Institute
 institute.name.required = Не заполнено поле "ВУЗ"
+
+# Grade
+grade.name.required = Не заполнено поле "Класс"
