--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,4 +5,11 @@ place.name.required = Не заполнено поле "Площадка"
 institute.name.required = Не заполнено поле "ВУЗ"
 
 # Grade
-grade.name.required = Не заполнено поле "Класс"
+grade.codePhrase.tooLong = Кодовая фраза слишком длинная!
+grade.replyTo.tooLong = Email слишком длинный!
+grade.replyTo.wrongEmail = Введите корректный Email!
+grade.replyName.tooLong = Слишком длинное имя!
+grade.serviceEmail.tooLong = Email слишком длинный!
+grade.serviceEmail.wrongEmail = Введите корректный Email!
+grade.beforeText.tooLong = Слишком длинный текст!
+grade.afterText.tooLong = Слишком длинный текст!
