--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,7 @@ institute.name.required = Не заполнено поле "ВУЗ"
 
 # Grade
 grade.name.required = Не заполнено поле "Класс"
+
+# Country
+country.name.required = Не заполнено поле "Страна"
+country.name.length = Название страны должно содержать от {min} до {max} символов
