Add country messages after branch update

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,7 @@ grade.serviceEmail.tooLong = Email слишком длинный!
 grade.serviceEmail.wrongEmail = Введите корректный Email!
 grade.beforeText.tooLong = Слишком длинный текст!
 grade.afterText.tooLong = Слишком длинный текст!
+
+# Country
+country.name.required = Не заполнено поле "Страна"
+country.name.length = Название страны должно содержать от {min} до {max} символов
