Add diploma and image messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,3 +17,12 @@ grade.afterText.tooLong = Слишком длинный текст!
 # Country
 country.name.required = Не заполнено поле "Страна"
 country.name.length = Название страны должно содержать от {min} до {max} символов
+
+# Diploma
+diploma.name.required = Не заполнено поле "Имя"
+diploma.name.length = Название диплома должно содержать от {min} до {max} символов
+diploma.type.image.required = Не указан файл с изображением для диплома
+diploma.type.name.unique = Диплом с таким названием уже есть
+
+# Image
+image.mime.type = Файл должен иметь расширение jpg или png
