Used new Email annotation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,6 @@ diploma.type.name.unique = Диплом с таким названием уже 
 
 # Image
 image.mime.type = Файл должен иметь расширение jpg или png
+
+# Email
+email.pattern = Введите корректный email
