--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,14 +5,10 @@ place.name.required = Не заполнено поле "Площадка"
 institute.name.required = Не заполнено поле "ВУЗ"
 
 # Grade
-grade.codePhrase.tooLong = Кодовая фраза слишком длинная!
-grade.replyTo.tooLong = Email слишком длинный!
-grade.replyTo.wrongEmail = Введите корректный Email!
-grade.replyName.tooLong = Слишком длинное имя!
-grade.serviceEmail.tooLong = Email слишком длинный!
-grade.serviceEmail.wrongEmail = Введите корректный Email!
-grade.beforeText.tooLong = Слишком длинный текст!
-grade.afterText.tooLong = Слишком длинный текст!
+grade.codePhrase.tooLong = Кодовая фраза должна содержать до {max} символов
+grade.email.tooLong = Email должен содержать до {max} символов
+grade.replyName.tooLong = Имя должно содержать до {max} символов
+grade.text.tooLong = Текст должен содержать до {max} символов
 
 # Country
 country.name.required = Не заполнено поле "Страна"
