--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,8 @@ place.name.required = Не заполнено поле "Площадка"
 institute.name.required = Не заполнено поле "ВУЗ"
 
 # Grade
+grade.name.null = Не заполнено поле "Класс"
+grade.name.tooLong = Название класса должно содержать до {max} символов
 grade.codePhrase.tooLong = Кодовая фраза слишком длинная!
 grade.replyTo.tooLong = Email слишком длинный!
 grade.replyTo.wrongEmail = Введите корректный Email!
