--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,12 @@
 # Place
 place.name.required = Не заполнено поле "Площадка"
 
+# School
+school.number.required = Не заполнено поле "Номер школы"
+school.title.required = Не заполнено поле "Краткое название"
+school.address.required = Не заполнено поле "Адрес школы"
+school.title.length = Краткое название должно содержать от {min} до {max} символов
+
 # Institute
 institute.name.required = Не заполнено поле "ВУЗ"
 
