Added error messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
+# Town
+town.name.required = Не заполнено поле "Город"
+town.name.tooLong = Название города должно содержать до {max} символов
+
 # Place
 place.name.required = Не заполнено поле "Площадка"
 
