--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,7 +31,7 @@ diploma.type.image.required = Не указан файл с изображени
 diploma.type.name.unique = Диплом с таким названием уже есть
 
 # Image
-image.mime.type = Файл должен иметь расширение jpg или png
+image.mime.type = Изображение должно иметь расширение jpg, png или gif
 
 # File
 file.uploaded = Пожалуйста, загрузите файл
