Added cross-field validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,7 +33,7 @@ diploma.type.name.unique = Диплом с таким названием уже 
 # Task
 task.correctAnswer.required = Пожалуйста, введите ответы на задачу
 task.gradePoints.required = Пожалуйста, введите баллы за задачу
-
+task.correctAnswer.number = ⬍ Количество ответов должно совпадать с количеством баллов ⬍
 
 # Custom annotation defaults
 email.pattern = Введите корректный email
